# kerlever

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/agents/: architect.md  coding.md  manager.md
.codex/: config.toml
.codex/agents/: README.md  architect.toml  coding.toml  manager.toml
.planning/: plan.md
.planning/manager/: log.md  notes.md  state.md
docker/benchmarker/: Dockerfile  entrypoint.sh
docker/compiler-service/: .dockerignore  Dockerfile  entrypoint.sh
docs/: architecture-remediation.md  architecture.md  benchmarker.md  bitter-lessons.md  compiler-service.md  strategy-navigator.md
docs/benchmarker/: design.md  spec.md
docs/coding-agent/: spec.md
docs/compiler-service/: design.md  spec.md
docs/cross-candidate-analyzer/: spec.md
docs/navigator/: spec.md
docs/orchestrator/: spec.md
docs/spec-builder/: spec.md
examples/: matmul_spec.yaml
kerlever/: __init__.py  __main__.py  llm_client.py  orchestrator.py  protocols.py  state.py  types.py
kerlever/benchmarker/: __init__.py  adapter.py  config.py  cuda_driver.py  fault.py  harness.py  lease.py  main.py  normalize.py  plan.py  profile_child.py  profiler.py  scoring.py  selection.py  service.py  stats.py  supervisor.py  telemetry.py  types.py  worker.py
kerlever/coding_agent/: __init__.py  config.py  generator.py  hardware.py  prompt_builder.py  types.py
scripts/: benchmarker_dry_run.py
src/kerlever/: __main__.py  (+5 more)
tests/: test_benchmarker_core.py  test_compiler_service_core.py  test_cross_candidate_analyzer.py  test_orchestrator.py  test_problem_spec.py  test_state.py
(+81 files in other folders)
